--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,67 @@
 aiohttp==3.8.5
+aiohttp-retry==2.8.3
 aiosignal==1.3.1
+annotated-types==0.5.0
+anyio==3.7.1
 async-timeout==4.0.2
 attrs==23.1.0
+backoff==2.2.1
 blinker==1.6.2
+boto3==1.28.40
+botocore==1.31.75
 certifi==2023.7.22
 charset-normalizer==3.2.0
-click==8.1.3
-Flask==2.3.2
-Flask-Login==0.6.2
-Flask-SQLAlchemy==2.5.1
+click==8.1.7
+dnspython==2.4.2
+email-validator==2.0.0.post2
+fastapi==0.103.1
+Flask==3.0.0
+Flask-Login==0.6.3
+Flask-SQLAlchemy==3.1.1
 frozenlist==1.4.0
+greenlet==2.0.2
+h11==0.14.0
+httpcore==0.17.3
+httptools==0.6.0
+httpx==0.24.1
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jmespath==1.0.1
 json5==0.9.10
 MarkupSafe==2.1.1
 multidict==6.0.4
 openai==0.27.8
+orjson==3.9.5
 passlib==1.7.4
+Pillow==10.0.0
+py-cpuinfo==9.0.0
+pydantic==2.3.0
+pydantic-extra-types==2.1.0
+pydantic-settings==2.0.3
+pydantic_core==2.6.3
+python-dateutil==2.8.2
 python-dotenv==1.0.0
+python-multipart==0.0.6
 pytz==2022.2.1
+PyYAML==6.0.1
 requests==2.31.0
-SQLAlchemy==1.4.41
+runpod==1.2.0
+s3transfer==0.6.2
+six==1.16.0
+sniffio==1.3.0
+SQLAlchemy==2.0.22
+starlette==0.27.0
+tomli==2.0.1
 tqdm==4.65.0
-urllib3==2.0.4
-Werkzeug==2.3.6
+tqdm-loggable==0.1.4
+typing_extensions==4.7.1
+ujson==5.8.0
+urllib3==2.0.7
+uvicorn==0.23.2
+uvloop==0.17.0
+watchfiles==0.20.0
+websockets==11.0.3
+Werkzeug==3.0.1
 yarl==1.9.2
 zope.interface==5.4.0
